deploy/example-ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
spec:
  selector:
    matchLabels:
      run: nginx-1
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx-1
    spec:
      containers:
        - name: nginx-1
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  labels:
    run: nginx-1
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    run: nginx-1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
spec:
  selector:
    matchLabels:
      run: flask-hello
  replicas: 1
  template:
    metadata:
      labels:
        run: flask-hello
    spec:
      containers:
        - name: flask-hello
          image: gcr.io/hello-minikube-zero-install/hello-node
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
  labels:
    run: flask-hello
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    run: flask-hello

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress-nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin $http_origin;
      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
      add_header Access-Control-Allow-Credentials true;
      add_header Access-Control-Allow-Headers "*";
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    #nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    #nginx.ingress.kubernetes.io/cors-allow-headers: "User-Agent,Content-Type,Authorization,Host"
spec:
  #tls:
  #- hosts:
  #  - api.smart-agricultureerjfpojrfopjear.com
  #  secretName: api-certificates-secret  
  rules:
  - host: api.smart-agricultureerjfpojrfopjear.com
    http:
      paths:
      - backend:
          serviceName: nginx-1
          servicePort: 80
        path: /
